# bf2wasm

./: Cargo.toml  LICENSE  README.md  _class-grid.scss  index.html  main.js  main.js.map  main.ts  styles.css  styles.css.map  styles.scss  watch-build.sh  watch-sass.sh  watch-ts.sh
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  optimizer.rs  parser.rs
compiler/src/wasm/: instr.rs  mod.rs
js-lib/: compilation.js  compilation.js.map  invocation.js  invocation.js.map
js-lib/wasm/: wasm_module.d.ts  wasm_module.js  wasm_module_bg.d.ts
samples/: .gitignore
samples/eof/: eof.bf  index.html  main.js
samples/hello/: hello.bf  index.html  main.js
samples/simple/: index.html  main.js  simple.bf
scripts/lib/: defs.js  defs.js.map  defs.ts  tsconfig.json
scripts/web/: main.js  main.js.map  main.ts  tsconfig.json
scripts/worker/: compilation.ts  defs.ts  invocation.ts  main.js  main.js.map  main.ts  tsconfig.json  wasm_module.d.ts
scripts/worker/js-lib/wasm/: wasm_module.js  wasm_module_bg.wasm
wasm-module/: Cargo.toml  README.md  compilation.ts  index.html  invocation.ts  main.js  main.ts  tsconfig.json
wasm-module/js-lib/: compilation.ts  invocation.ts
wasm-module/src/: lib.rs
