[package]
name = "cli"
version = "0.1.0"
authors = ["Kai Page <kaibug@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }

exitcode = "1.1.2"
#simple_logger = "1.3.0"
structopt = "0.3.5"
